# AI_WEBSITE_SUMMARISER

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: local_summariser.ipynb  main.py  scraper.py  streamlit.py  summariser.ipynb
app/notebook/: summariser.ipynb
