[project]
name = "ai-website-summariser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "openai>=2.14.0",
    "python-dotenv>=1.2.1",
    "selenium>=4.39.0",
    "streamlit>=1.52.2",
]
