[project]
name = "ai-website-summariser"
version = "0.1.0"
description = "The tool intelligently waits for page elements to load before retrieving content, ensuring reliable operation on modern web pages. Summaries are powered by a configurable AI model from OpenRouter, allowing flexible use of free or paid endpoints."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "openai>=2.14.0",
    "python-dotenv>=1.2.1",
    "selenium>=4.39.0",
    "streamlit>=1.52.2",
]
